支持自动生成默认配置文件